# pi_gripper

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
docs/: HARDWARE.md
launch/: pi_gripper.launch.py
pi_gripper/: __init__.py  pi_gripper_node.py  pwm_driver.py  pwm_pca9685_driver.py  pwm_software_driver.py
scripts/: run_realtime.sh  setup_service.sh  start_service.sh
systemd/: pi-gripper.service
